--- a/lib/Views/DataCatalogTab.html
+++ b/lib/Views/DataCatalogTab.html
@@ -1,5 +1,5 @@
 <script type="text/html" id="data-catalog-item-template">
-    <!-- ko if: !isHidden && typeof items === 'undefined' -->
+    <!-- ko if: !isHidden && !isGroup -->
         <div class="data-catalog-member" data-bind="css: 'data-catalog-indent' + ($parents.length - 2)">
             <div class="data-catalog-member-top-row">
                 <!-- ko if: isMappable -->
@@ -31,7 +31,7 @@
         </div>
     <!-- /ko -->
 
-    <!-- ko if: !isHidden && typeof items !== 'undefined' -->
+    <!-- ko if: !isHidden && isGroup -->
         <div class="data-catalog-member" data-bind="css: 'data-catalog-indent' + ($parents.length - 2)">
             <div class="data-catalog-member-top-row">
                 <div class="data-catalog-icon-holder clickable" data-bind="click: $root.clickOpen.bind($root)">
