--- a/lib/Views/SearchTab.html
+++ b/lib/Views/SearchTab.html
@@ -1,5 +1,5 @@
 <script type="text/html" id="search-catalog-item-template">
-    <!-- ko if: !isHidden && typeof items === 'undefined' -->
+    <!-- ko if: !isHidden && !isGroup -->
         <div class="data-catalog-member" data-bind="css: 'data-catalog-indent' + ($parents.length - 2)">
             <div class="data-catalog-member-top-row">
                 <div class="data-catalog-icon-holder clickable" data-bind="click: toggleEnabled">
@@ -19,7 +19,7 @@
         </div>
     <!-- /ko -->
 
-    <!-- ko if: !isHidden && typeof items !== 'undefined' -->
+    <!-- ko if: !isHidden && isGroup -->
         <div class="data-catalog-member" data-bind="css: 'data-catalog-indent' + ($parents.length - 2)">
             <div class="data-catalog-member-top-row">
                 <div class="data-catalog-icon-holder clickable" data-bind="click: $parent.type === 'search_result' ? $parent.toggleOpen.bind($parent) : toggleOpen">
