--- a/lib/Views/RegionTypeParameterEditor.html
+++ b/lib/Views/RegionTypeParameterEditor.html
@@ -1,6 +1,6 @@
 <div>
     <label class="parameter-editor-table-left" data-bind="text: parameter.name, attr: { for: 'parameter-editor-' + encodeURIComponent(parameter.name) }"></label>
     <div class="parameter-editor-table-right">
-        <select data-bind="options: regions, value: value, attr: { id: 'parameter-editor-' + encodeURIComponent(parameter.name) }"></select>
+        <select data-bind="options: regionProviders, optionsText: 'regionType', value: value, attr: { id: 'parameter-editor-' + encodeURIComponent(parameter.name) }"></select>
     </div>
 </div>
