--- a/lib/Views/FeatureInfoPanel.html
+++ b/lib/Views/FeatureInfoPanel.html
@@ -2,12 +2,9 @@
     <div class="feature-info-panel-holder-inner">
         <div class="feature-info-panel" data-bind="style: { 'max-width': maxWidth + 'px' }">
             <div class="feature-info-panel-body">
-                <div class="feature-info-panel-section">
-                    <div class="feature-info-panel-section-header">
-                        <span class="feature-info-panel-section-label" data-bind="text: name"></span>
-                        <div class="feature-info-panel-close-button" data-bind="click: close">&times;</div>
+                <div class="feature-info-panel-section" data-bind="foreach: sections">
+                    <div data-bind="embeddedComponent: $data">
                     </div>
-                    <div class="feature-info-panel-section-content" data-bind="markdown: html, style: { 'max-height': maxHeight + 'px' }, css: { 'feature-info-panel-section-content-white-background': useWhiteBackground }"></div>
                 </div>
             </div>
         </div>
