single working close button

--- a/lib/Styles/FeatureInfoPanel.less
+++ b/lib/Styles/FeatureInfoPanel.less
@@ -38,6 +38,15 @@
     box-shadow: @panel-box-shadow;
 }
 
+.feature-info-panel-header {
+    font-size: 0.9em;
+    padding: 8px;
+    background-color: @info-header-background-color;
+    color: @info-header-text-color;
+    border-bottom: @panel-element-border;
+    font-weight: 700;
+}
+
 .feature-info-panel-body {
     .opaque-to-input;
 }
