--- a/lib/Views/FeatureInfoPanelSection.html
+++ b/lib/Views/FeatureInfoPanelSection.html
@@ -2,5 +2,5 @@
     <div class="feature-info-panel-section-header">
         <span class="feature-info-panel-section-label" data-bind="text: name"></span>
     </div>
-    <div class="feature-info-panel-section-content" data-bind="markdown: html, style: { 'max-height': maxHeight + 'px' }, css: { 'feature-info-panel-section-content-white-background': useWhiteBackground }"></div>
+    <div class="feature-info-panel-section-content" data-bind="markdown: info, style: { 'max-height': maxHeight + 'px' }, css: { 'feature-info-panel-section-content-white-background': useWhiteBackground }"></div>
 </div>
