section height resizes

--- a/lib/Styles/FeatureInfoPanel.less
+++ b/lib/Styles/FeatureInfoPanel.less
@@ -37,6 +37,7 @@
     max-width: 600px; // adjusted dynamically in FeatureInfoPanelViewModel.js
     position: absolute;
     box-shadow: @panel-box-shadow;
+    overflow-y: auto;
 }
 
 .feature-info-panel-header {
