--- a/lib/Views/FeatureInfoPanel.html
+++ b/lib/Views/FeatureInfoPanel.html
@@ -1,6 +1,6 @@
 <div class="feature-info-panel-holder" data-bind="css: { 'feature-info-panel-holder-hidden': !isVisible }, click: closeIfClickOnBackground">
     <div class="feature-info-panel-holder-inner">
-        <div class="feature-info-panel" data-bind="style: { 'max-width': maxWidth + 'px' }">
+        <div class="feature-info-panel" data-bind="style: { 'max-width': maxWidth + 'px', 'max-height': maxHeight + 'px' }">
             <div class="feature-info-panel-body">
                 <div class="feature-info-panel-header">
                     <span class="feature-info-panel-section-label" data-bind="text: name"></span>
