Hacky catalog changes.

--- a/lib/Styles/NowViewingTab.less
+++ b/lib/Styles/NowViewingTab.less
@@ -80,6 +80,7 @@
 }
 
 .now-viewing-clear-all {
+    padding-right: 10px;
 }
 
 .now-viewing-list {
@@ -98,6 +99,7 @@
     font-size: 14px;
     color: @now-viewing-text-color;
     border-top: @panel-element-border;
+    line-height: 20px;
 }
 
 .now-viewing-item-arrow-holder {
