--- a/lib/Views/FeatureInfoPanelSection.html
+++ b/lib/Views/FeatureInfoPanelSection.html
@@ -6,7 +6,7 @@
         <!-- ko if: feature != terria.selectedFeature -->
         <div class="feature-info-panel-section-arrow" data-bind="cesiumSvgPath: { path: svgArrowRight, width: 32, height: 32 }"></div>
         <!-- /ko -->
-        <span class="feature-info-panel-section-label" data-bind="text: catalogItem.name"></span>
+        <span class="feature-info-panel-section-label" data-bind="text: catalogItemName"></span>
         <span class="feature-info-panel-section-label" data-bind="text: name"></span>
     </div>
     <!-- ko if: feature == terria.selectedFeature -->
