add title option, fix legend bg

--- a/lib/Views/Chart.html
+++ b/lib/Views/Chart.html
@@ -2,6 +2,9 @@
     .dygraph-axis-label {
         color: white;
     }
+    .dygraph-legend {
+        background: none !important;
+    }
 </style>
 <div class="chart" data-bind="attr: {'id': containerId}">
 </div>
