fix css to remove double scroll bars

--- a/lib/Styles/FeatureInfoPanel.less
+++ b/lib/Styles/FeatureInfoPanel.less
@@ -84,7 +84,7 @@
     font-weight: lighter;
     padding: 15px;
     overflow: auto;
-    max-height: 600px; // adjusted dynamically in FeatureInfoPanelViewModel.js
+    // max-height: 600px; // adjusted dynamically in FeatureInfoPanelViewModel.js
     text-align: left;
 }
 
