basic styling looks ok

--- a/lib/Styles/ChartPanel.less
+++ b/lib/Styles/ChartPanel.less
@@ -30,10 +30,10 @@
 
 .chart-panel {
     .panel;
+    border-top: solid 1px @panel-element-border;
     background-color: @panel-background-color;
-    bottom: 75px;
-    right: 95px;
-    max-width: 1200px;
+    bottom: 0;
+    right: 0;
     position: absolute;
     box-shadow: @panel-box-shadow;
     overflow-y: auto;
