--- a/lib/Views/ChartPanel.html
+++ b/lib/Views/ChartPanel.html
@@ -1,13 +1,15 @@
 <div class="chart-panel-holder" data-bind="css: { 'chart-panel-holder-hidden': !isVisible }">
     <div class="chart-panel-holder-inner">
-        <div class="chart-panel" data-bind="style: { 'width': width + 'px', 'max-height': maxHeight + 'px' }">
+        <div class="chart-panel" data-bind="style: { 'width': width + 'px' }">
             <div class="chart-panel-body">
                 <div class="chart-panel-header">
                     <span class="chart-panel-section-label" data-bind="text: title"></span>
                     <div class="chart-panel-close-button" data-bind="click: close">&times;</div>
                 </div>
                 <div class="chart-panel-section" data-bind="foreach: charts">
-                    <div data-bind="embeddedComponent: $data">
+                    <div class="chart-panel-section-content">
+                        <div data-bind="embeddedComponent: $data">
+                        </div>
                     </div>
                 </div>
             </div>
