clicking on preview chart opens chart panel

--- a/lib/Styles/FeatureInfoPanel.less
+++ b/lib/Styles/FeatureInfoPanel.less
@@ -110,6 +110,20 @@
     padding-left: 10px;
 }
 
+.expand-chart-button {
+    position: relative;
+    background-color: blue;
+    border: 0;
+    height: 30px;
+    width: 75px;
+    font-size: 14px;
+    color: @panel-form-button-text-color;
+    left: 46%;
+    top: -180px;
+    cursor: pointer;
+}
+
+
 @media print {
     .feature-info-panel {
         display: none;
