--- a/lib/Styles/FeatureInfoPanel.less
+++ b/lib/Styles/FeatureInfoPanel.less
@@ -31,12 +31,38 @@
 
 .feature-info-panel {
     .panel;
+    width: auto;
+    -webkit-transition: all @explorer-panel-close-animation-length ease-out, visibility 0s @explorer-panel-close-animation-length;
+    -moz-transition: all @explorer-panel-close-animation-length ease-out, visibility 0s @explorer-panel-close-animation-length;
+    -ms-transition: all @explorer-panel-close-animation-length ease-out, visibility 0s @explorer-panel-close-animation-length;
+    -o-transition: all @explorer-panel-close-animation-length ease-out, visibility 0s @explorer-panel-close-animation-length;
+    transition: all @explorer-panel-close-animation-length ease-out, visibility 0s @explorer-panel-close-animation-length;
+
     background-color: @panel-background-color;
     top: 60px;
     right: 95px;
     max-width: 600px; // adjusted dynamically in FeatureInfoPanelViewModel.js
     position: absolute;
     box-shadow: @panel-box-shadow;
+}
+
+.feature-info-panel-section-content-wrapper{
+    width: 0;
+    height: 0;
+    -webkit-transition: all @explorer-panel-close-animation-length linear;
+    -moz-transition: all @explorer-panel-close-animation-length linear;
+    -ms-transition: all @explorer-panel-close-animation-length linear;
+    -o-transition: all @explorer-panel-close-animation-length linear;
+    transition: all @explorer-panel-close-animation-length linear;
+
+}
+
+.feature-info-panel-section-open{
+    .feature-info-panel-section-content-wrapper{
+        width: 1000px;
+        max-width: 100%;
+        height: 485px;
+    }
 }
 
 .feature-info-panel-header {
@@ -48,9 +74,11 @@
     font-weight: 700;
 }
 
+
 .feature-info-panel-body {
     .opaque-to-input;
 }
+//data-bind="style: { 'max-width': maxWidth + 'px' }
 
 .feature-info-panel-sections {
     overflow-y: auto;
@@ -82,8 +110,8 @@
 .feature-info-panel-section-content {
     color: @info-text-color;
     font-weight: lighter;
+    overflow: visible;
     padding: 15px;
-    overflow: auto;
     // max-height: 600px; // adjusted dynamically in FeatureInfoPanelViewModel.js
     text-align: left;
 }
