--- a/lib/Views/FeatureInfoPanelSection.html
+++ b/lib/Views/FeatureInfoPanelSection.html
@@ -1,4 +1,4 @@
-<div class="feature-info-panel-section">
+<div class="feature-info-panel-section-inner" data-bind="css: { 'feature-info-panel-section-open': isOpen }">
     <div class="feature-info-panel-section-header" data-bind="click: toggleOpen">
         <!-- ko if: feature == terria.selectedFeature -->
         <div class="feature-info-panel-section-arrow" data-bind="cesiumSvgPath: { path: svgArrowDown, width: 32, height: 32 }"></div>
@@ -9,7 +9,9 @@
         <span class="feature-info-panel-section-label" data-bind="text: catalogItemName"></span>
         <span class="feature-info-panel-section-label" data-bind="text: name"></span>
     </div>
+    <div class="feature-info-panel-section-content-wrapper">
     <!-- ko if: feature == terria.selectedFeature -->
     <div class="feature-info-panel-section-content" data-bind="markdown: info, css: { 'feature-info-panel-section-content-white-background': useWhiteBackground }"></div>
     <!-- /ko -->
+    </div>
 </div>
