--- a/lib/Styles/FeatureInfoPanel.less
+++ b/lib/Styles/FeatureInfoPanel.less
@@ -32,12 +32,6 @@
 .feature-info-panel {
     .panel;
     width: auto;
-    -webkit-transition: all @explorer-panel-close-animation-length ease-out, visibility 0s @explorer-panel-close-animation-length;
-    -moz-transition: all @explorer-panel-close-animation-length ease-out, visibility 0s @explorer-panel-close-animation-length;
-    -ms-transition: all @explorer-panel-close-animation-length ease-out, visibility 0s @explorer-panel-close-animation-length;
-    -o-transition: all @explorer-panel-close-animation-length ease-out, visibility 0s @explorer-panel-close-animation-length;
-    transition: all @explorer-panel-close-animation-length ease-out, visibility 0s @explorer-panel-close-animation-length;
-
     background-color: @panel-background-color;
     top: 60px;
     right: 95px;
@@ -48,20 +42,20 @@
 
 .feature-info-panel-section-content-wrapper{
     width: 0;
-    height: 0;
-    -webkit-transition: all @explorer-panel-close-animation-length linear;
-    -moz-transition: all @explorer-panel-close-animation-length linear;
-    -ms-transition: all @explorer-panel-close-animation-length linear;
-    -o-transition: all @explorer-panel-close-animation-length linear;
-    transition: all @explorer-panel-close-animation-length linear;
-
+    -webkit-transition: width @explorer-panel-close-animation-length ease-out;
+    -moz-transition: width @explorer-panel-close-animation-length ease-out;
+    -ms-transition: width @explorer-panel-close-animation-length ease-out;
+    -o-transition: width @explorer-panel-close-animation-length ease-out;
+    transition: width @explorer-panel-close-animation-length ease-out;
+    table{
+        width: 100%;
+    }
 }
 
-.feature-info-panel-section-open{
+.feature-info-panel-body.open{
     .feature-info-panel-section-content-wrapper{
         width: 1000px;
         max-width: 100%;
-        height: 485px;
     }
 }
 
