--- a/lib/Views/FeatureInfoPanelSection.html
+++ b/lib/Views/FeatureInfoPanelSection.html
@@ -1,4 +1,4 @@
-<div class="feature-info-panel-section-inner" data-bind="css: { 'feature-info-panel-section-open': isOpen }">
+<div class="feature-info-panel-section">
     <div class="feature-info-panel-section-header" data-bind="click: toggleOpen">
         <!-- ko if: feature == terria.selectedFeature -->
         <div class="feature-info-panel-section-arrow" data-bind="cesiumSvgPath: { path: svgArrowDown, width: 32, height: 32 }"></div>
