--- a/lib/Styles/FeatureInfoPanel.less
+++ b/lib/Styles/FeatureInfoPanel.less
@@ -55,7 +55,7 @@
     .feature-info-panel-section-content-wrapper{
         width: 1000px;
         max-width: 100%;
-        height: 485px;
+        height: auto;
     }
 }
 
