--- a/lib/Styles/FeatureInfoPanel.less
+++ b/lib/Styles/FeatureInfoPanel.less
@@ -42,12 +42,11 @@
 
 .feature-info-panel-section-content-wrapper{
     width: 0;
-    height: 0;
-    -webkit-transition: all @explorer-panel-close-animation-length linear;
-    -moz-transition: all @explorer-panel-close-animation-length linear;
-    -ms-transition: all @explorer-panel-close-animation-length linear;
-    -o-transition: all @explorer-panel-close-animation-length linear;
-    transition: all @explorer-panel-close-animation-length linear;
+    -webkit-transition: all @explorer-panel-close-animation-length ease-out;
+    -moz-transition: all @explorer-panel-close-animation-length ease-out;
+    -ms-transition: all @explorer-panel-close-animation-length ease-out;
+    -o-transition: all @explorer-panel-close-animation-length ease-out;
+    transition: all @explorer-panel-close-animation-length ease-out;
 
 }
 
@@ -55,7 +54,6 @@
     .feature-info-panel-section-content-wrapper{
         width: 1000px;
         max-width: 100%;
-        height: auto;
     }
 }
 
