interpret chart tag in the feature info section panel

--- a/lib/Views/FeatureInfoPanelSection.html
+++ b/lib/Views/FeatureInfoPanelSection.html
@@ -11,12 +11,14 @@
     </div>
     <!-- ko if: feature == terria.selectedFeature -->
     <div class="feature-info-panel-section-content" data-bind="style: { css: { 'feature-info-panel-section-content-white-background': useWhiteBackground }">
-        <div data-bind="markdown: info"></div>
-        <div data-bind="embeddedComponent: chartViewModel">
+        <div data-bind="markdown: infoHtml"></div>
+        <div data-bind="foreach: chartViewModels">
+            <div data-bind="embeddedComponent: $data">
+            </div>
+            <!-- ko if: $parent.featureInfoPanelViewModel.chartPanelViewModel -->
+            <button class="expand-chart-button" data-bind="click: $parent.expandChart">Expand</button>
+            <!-- /ko -->
         </div>
-        <!-- ko if: featureInfoPanelViewModel.chartPanelViewModel -->
-        <button class="expand-chart-button" data-bind="click: expandChart">Expand</button>
-        <!-- /ko -->
     </div>
     <!-- /ko -->
 </div>
