expand button works, and good default title

--- a/lib/Styles/FeatureInfoPanel.less
+++ b/lib/Styles/FeatureInfoPanel.less
@@ -123,6 +123,10 @@
     cursor: pointer;
 }
 
+.feature-info-panel-section-content .chart-holder {
+    margin-top: 15px;
+}
+
 
 @media print {
     .feature-info-panel {
