add src download link to chart preview

--- a/lib/Styles/FeatureInfoPanel.less
+++ b/lib/Styles/FeatureInfoPanel.less
@@ -127,6 +127,14 @@
     margin-top: 15px;
 }
 
+.feature-info-panel-section-content .download-chart-data {
+    float: right;
+}
+
+.feature-info-panel-section-content .download-chart-data-clear {
+    clear: both;
+}
+
 
 @media print {
     .feature-info-panel {
