--- a/lib/Styles/FeatureInfoPanel.less
+++ b/lib/Styles/FeatureInfoPanel.less
@@ -42,6 +42,7 @@
 
 .feature-info-panel-section-content-wrapper{
     width: 0;
+    height: auto;
     -webkit-transition: width @explorer-panel-close-animation-length ease-out;
     -moz-transition: width @explorer-panel-close-animation-length ease-out;
     -ms-transition: width @explorer-panel-close-animation-length ease-out;
