--- a/lib/Views/FeatureInfoPanel.html
+++ b/lib/Views/FeatureInfoPanel.html
@@ -1,7 +1,7 @@
 <div class="feature-info-panel-holder" data-bind="css: { 'feature-info-panel-holder-hidden': !isVisible }, click: closeIfClickOnBackground">
     <div class="feature-info-panel-holder-inner">
         <div class="feature-info-panel" data-bind="style: { 'max-width': maxWidth + 'px' }">
-            <div class="feature-info-panel-body" data-bind="css: {'open': terria.selectedFeature}">
+            <div class="feature-info-panel-body">
                 <div class="feature-info-panel-header">
                     <span class="feature-info-panel-section-label" data-bind="text: name"></span>
                     <div class="feature-info-panel-close-button" data-bind="click: close">&times;</div>
