Add a ReportCatalogItem, use it for WhyAmISpecial.

--- a/lib/Styles/Core.less
+++ b/lib/Styles/Core.less
@@ -167,3 +167,33 @@ select {
   font-size: 14px;
   padding-left: 5px;
 }
+
+.markdown {
+    h1 {
+        font-size: 2em;
+        font-weight: bold;
+    }
+
+    h2 {
+        font-size: 1.5em;
+        font-weight: bold;
+    }
+
+    h3 {
+        font-size: 1.17em;
+        font-weight: bold;
+    }
+
+    h4 {
+        font-weight: bold;
+    }
+
+    p {
+        margin-top:1em;
+        margin-bottom:1em;
+    }
+
+    ol, ul {
+        list-style: disc inside;
+    }
+}
