chart tags can appear within html

--- a/lib/Styles/ChartPanel.less
+++ b/lib/Styles/ChartPanel.less
@@ -3,6 +3,13 @@
 @chart-header-background-color: @panel-section-background-color;
 @chart-header-text-color: @panel-emphasized-text-color;
 
+.chart-wrapper {
+    background-color: #202020;
+    padding: 10px;
+    display: block;
+    margin: 10px 10px 10px 0;
+}
+
 .chart-panel-holder {
     .panel;
     .opaque-to-input;
