--- a/lib/Views/FeatureInfoPanelSection.html
+++ b/lib/Views/FeatureInfoPanelSection.html
@@ -1,3 +1,7 @@
+<script type="text/html" id="infoHtml-template">
+    <div data-bind="markdown: infoHtml"></div>
+</script>
+
 <div class="feature-info-panel-section">
     <div class="feature-info-panel-section-header" data-bind="click: toggleOpen">
         <!-- ko if: feature == terria.selectedFeature -->
@@ -11,16 +15,14 @@
     </div>
     <div class="feature-info-panel-section-content-wrapper" data-bind ="css:feature == terria.selectedFeature ?'open': 'closed'">
         <div class="feature-info-panel-section-content" data-bind="style: { css: { 'feature-info-panel-section-content-white-background': useWhiteBackground }">
-            <div data-bind="markdown: infoHtml"></div>
-            <div data-bind="foreach: chartViewModels">
-                <div data-bind="embeddedComponent: $data">
-                </div>
-                <!-- ko if: $parent.featureInfoPanelViewModel.chartPanelViewModel -->
-                <button class="expand-chart-button" data-bind="click: $parent.expandChart.bind($parent, $data)">Expand</button>
-                <!-- /ko -->
-                <a class="download-chart-data" data-bind="attr: { 'href': options.src }">Download</a>
-                <div class="download-chart-data-clear"></div>
-            </div>
+            <div data-bind="template: {name: 'infoHtml-template', afterRender: renderCustomTags.bind($data)}"></div>
+
+            <!-- ko if: true -->
+            <button class="expand-chart-button" data-bind="click: expandChart.bind($data)">Expand</button>
+            <!-- /ko -->
+            <a class="download-chart-data" data-bind="attr: { 'href': 'src' }">Download</a>
+            <div class="download-chart-data-clear"></div>
+
         </div>
     </div>
 </div>
