Show charts for whyamispecial service.

--- a/lib/Styles/NowViewingTab.less
+++ b/lib/Styles/NowViewingTab.less
@@ -204,3 +204,12 @@
 .now-viewing-abs-tighten {
     line-height: 22px;
 }
+
+.now-viewing-chart-description {
+    padding-left: 25px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    color: @panel-text-color;
+    font-weight: lighter;
+}
+
