chart in first section appears again using custom tag approach

--- a/lib/Styles/ChartPanel.less
+++ b/lib/Styles/ChartPanel.less
@@ -3,6 +3,15 @@
 @chart-header-background-color: @panel-section-background-color;
 @chart-header-text-color: @panel-emphasized-text-color;
 
+/* These two should go in a new Chart.less file */
+.dygraph-axis-label {
+    color: white;
+}
+.dygraph-legend {
+    background: none !important;
+}
+/* */
+
 .chart-wrapper {
     background-color: #202020;
     padding: 10px;
