Region searching, zoom to selected region.

--- a/lib/Styles/InvokeFunctionPanel.less
+++ b/lib/Styles/InvokeFunctionPanel.less
@@ -112,3 +112,28 @@
 .parameter-editor-text-input input {
     height: 20px;
 }
+
+.parameter-editor-autocomplete {
+    background-color: white;
+    border: 1px solid black;
+    padding: 5px;
+    position: absolute;
+    z-index: 100;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    width: 300px;
+    max-height: 200px;
+    overflow: auto;
+}
+
+.parameter-editor-autocomplete-option {
+    cursor: pointer;
+    color: black;
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
+.parameter-editor-autocomplete-option:hover {
+    background-color: blue;
+    color: white;
+}
