--- a/lib/Styles/Core.less
+++ b/lib/Styles/Core.less
@@ -204,7 +204,7 @@ select {
 
   p {
     margin-top: 0;
-    margin-bottom: 1rem;
+    margin-bottom: 0; // 1rem;
   }
 
   strong { font-weight: bold }
