--- a/lib/Styles/CatalogItemInfo.less
+++ b/lib/Styles/CatalogItemInfo.less
@@ -174,6 +174,7 @@
 .catalog-item-info-details-expand-button-holder {
     display: table-cell;
     width: 20px;
+    vertical-align: middle;
 }
 
 .catalog-item-info-details-expand-button {
