--- a/lib/Styles/Reset.less
+++ b/lib/Styles/Reset.less
@@ -45,3 +45,20 @@ table {
     border-collapse: collapse;
     border-spacing: 0;
 }
+
+button{
+    padding: 0;
+    margin: 0;
+    background: none;
+    border: 0;
+    color: inherit;
+    font: inherit;
+    line-height: normal;
+    overflow: visible;
+    padding: 0;
+    -webkit-appearance: none; /* for input */
+    -webkit-user-select: none; /* for button */
+    -moz-user-select: none;
+    -ms-user-select: none;
+    line-height: 40px;
+}
