--- a/lib/Views/SettingsPanel.html
+++ b/lib/Views/SettingsPanel.html
@@ -1,4 +1,4 @@
-<div class="settings-panel" data-bind="css: { 'settings-panel-hidden': !isVisible }">
+<div class="settings-panel" data-bind="css: { 'settings-panel-hidden': !isVisible }" tabindex="0">
     <div class="settings-panel-callout"></div>
     <div class="settings-panel-body">
         <div class="settings-panel-section">
