--- a/lib/Styles/ChartPanel.less
+++ b/lib/Styles/ChartPanel.less
@@ -3,22 +3,47 @@
 @chart-header-background-color: @panel-section-background-color;
 @chart-header-text-color: @panel-emphasized-text-color;
 
-/* These two should go in a new Chart.less file */
+/* These next should go in a new Chart.less file */
 .dygraph-axis-label {
     color: white;
 }
 .dygraph-legend {
     background: none !important;
 }
-/* */
+
+.expand-chart-button {
+    position: relative;
+    background-color: blue;
+    border: 0;
+    height: 30px;
+    width: 75px;
+    font-size: 14px;
+    color: @panel-form-button-text-color;
+    left: 46%;
+    top: -180px;
+    cursor: pointer;
+}
 
 .chart-wrapper {
     background-color: #202020;
     padding: 10px;
     display: block;
     margin: 10px 10px 10px 0;
-    padding-bottom: 30px;
 }
+
+.chart-wrapper .chart-holder {
+    margin-top: 15px;
+}
+
+.chart-wrapper .download-chart-data {
+    float: right;
+}
+
+.chart-wrapper .download-chart-data-clear {
+    clear: both;
+}
+/* */
+
 
 .chart-panel-holder {
     .panel;
