--- a/lib/Views/Chart.html
+++ b/lib/Views/Chart.html
@@ -12,8 +12,8 @@
     <!-- ko if: !isLoading && canExpand -->
     <button class="expand-chart-button" data-bind="click: expand.bind($data)">Expand</button>
     <!-- /ko -->
-    <!-- ko if: canDownload -->
-    <a class="download-chart-data" data-bind="attr: { 'href': 'src' }">Download</a>
+    <!-- ko if: canDownload && options.src -->
+    <a class="download-chart-data" data-bind="attr: { 'href': options.src }">Download</a>
     <div class="download-chart-data-clear"></div>
     <!-- /ko -->
 </div>
