now viewing keyboard nav

--- a/lib/Styles/CatalogItemInfo.less
+++ b/lib/Styles/CatalogItemInfo.less
@@ -2,6 +2,9 @@
     .modal;
     width: 800px;
     height: 520px;
+    button{
+        line-height: 40px;
+    }
 }
 
 .catalog-item-info-translucencySlider {
