Keep a margin between paragraphs, but not after the last one.

--- a/lib/Styles/Core.less
+++ b/lib/Styles/Core.less
@@ -204,7 +204,11 @@ select {
 
   p {
     margin-top: 0;
-    margin-bottom: 0; // 1rem;
+    margin-bottom: 1rem;
+  }
+
+  p:last-child {
+    margin-bottom: 0;
   }
 
   strong { font-weight: bold }
