--- a/lib/Views/SearchTab.html
+++ b/lib/Views/SearchTab.html
@@ -54,7 +54,7 @@
     <div class="search-tab-results-area" tabindex="-1" data-bind="visible: searchText, foreach: searchProviders">
         <div class="search-tab-provider">
             <div class="search-tab-provider-header" data-bind="click: toggleOpen">
-                <a href="" class="search-tab-provider-label" data-bind="text: name"></a>
+                <a href="#" class="search-tab-provider-label" data-bind="text: name"></a>
                 <div class="search-tab-provider-icon-holder">
                     <div class="search-tab-provider-icon" data-bind="cesiumSvgPath: { path: isOpen ? $root.svgArrowDown : $root.svgArrowRight, width: 32, height: 32 }"></div>
                 </div>
