use hidden input

--- a/lib/Views/DataCatalogTab.html
+++ b/lib/Views/DataCatalogTab.html
@@ -71,11 +71,11 @@
         </div>
     <!-- /ko -->
 </script>
-
+<input type="button" value="" class="is-hidden" data-bind ="hasFocus: $root.isActive"/>
 <div class="data-catalog-top-group" data-bind="foreach: catalog.group.items">
     <!-- ko if: !isHidden -->
         <div class="data-catalog-top-group-header" data-bind="click: $root.clickOpen.bind($root)">
-            <a href="#" name="data-catalogue" class="data-catalog-top-group-label" data-bind="text: name"></a>
+            <a href="#" class="data-catalog-top-group-label" data-bind="text: name"></a>
             <div class="data-catalog-icon-holder">
                 <div class="data-catalog-top-group-icon" data-bind="cesiumSvgPath: { path: isOpen ? $root.svgArrowDown : $root.svgArrowRight, width: 32, height: 32 }"></div>
             </div>
